# Provenable-Recursive-Verifiable-Guardrails-for-Agentic-AI

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  REFACTOR_PLAN.md  plan.md
.github/workflows/: ci.yml
crates/aegx-bundle/src/: bundle.rs  report.rs  verify.rs
crates/aegx-guard/src/: guard.rs  lib.rs  metrics.rs  skill_verifier.rs
crates/aegx-records/src/: audit_chain.rs  (+2 more)
docs/: AGENT_INTEGRATION.md  BUNDLE_FORMAT_GUIDE.md  CHANGELOG.md  CLI_REFERENCE.md  INSTALL.md  QUICKSTART.md  SPEC.md  THREAT_MODEL.md  TROUBLESHOOTING.md  VERIFICATION_GUIDE.md  aer-bundle-format.md  aer-cpi-mi-rules.md  aer-threat-model.md  aer-usage.md  clawhub-integration.md
fuzz/: proptest_bundles.rs  proptest_records.rs
installer/: LICENSE  README.md  checksums.txt
installer/docs/: INSTALLER_DOCS.md  RELEASE.md  SECURITY.md  VERIFY.md
installer/install/: install-openclaw-aer.ps1  install-openclaw-aer.sh  install-proven-aer.ps1  install-proven-aer.sh
installer/manifest/: manifest.json
installer/scripts/: gen_checksums.py  pin_openclaw.py  smoke_install_unix.sh  smoke_install_windows.ps1  validate_manifest.py
installer/tools/: Cargo.toml
schemas/: aegx-schemas.json  audit-entry.schema.json  manifest.schema.json  record.schema.json
skills/provenable/: GOLDEN_EXAMPLES.md  README.md  SKILL.md  claw.json
src/: audit.rs  bundle.rs  canonical.rs  hash.rs  lib.rs  records.rs  schema.rs  verify.rs
tests/: canonical_determinism.rs  cli_roundtrip.rs  integrity_tests.rs  schema_failures.rs  tamper_detection.rs  verification_tests.rs  verify_vectors.rs  zip_security.rs
(+34 files in other folders)
